--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   "keywords": [
     "compute.io",
     "compute",
-    "computation"
+    "computation",
+    "statistics",
+    "stats",
+    "sum",
+    "nan"
   ],
   "bugs": {
     "url": "https://github.com/compute-io/nansum/issues"
